# kaggle-scraper

./: .cursorignore  .env.sample  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
playbook/: kernels.ipynb
src/: config.py  data.py  main.py
