[project]
name = "kaggle-scraper"
version = "0.0.1"
description = "Scrape the Kaggle"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "kaggle>=1.8.3",
]

[project.scripts]
main = "src.main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
]
